objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Gender__c</fullName>
        <inlineHelpText>Displays the contact&apos;s gender. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Gender Neutral</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education_Completed__c</fullName>
        <inlineHelpText>Displays the staff member&apos;s highest level of education.</inlineHelpText>
        <label>Highest Level of Education Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bachelor&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>Vocational certificate</fullName>
                </value>
                <value>
                    <fullName>Graduate certificate</fullName>
                </value>
                <value>
                    <fullName>Master&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>Specialist&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>Doctoral degree</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not modify this field; it is used for internal purposes only.</inlineHelpText>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Language__c</fullName>
        <inlineHelpText>Displays the language spoken at home by the student contact and family. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Home Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Honors__c</fullName>
        <inlineHelpText>A long text area that displays a student&apos;s honors.  These values display in the Honors box on the transcript.</inlineHelpText>
        <label>Honors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immigrant_Program_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the student is an immigrant program participant</description>
        <inlineHelpText>Displays whether the student is an immigrant program participant. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Immigrant Program Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Immigrant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Displays whether or not the student is an immigrant. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Immigrant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Is Active? *Retired*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <inlineHelpText>Displays languages spoken by the contact.  This field must be updated manually.</inlineHelpText>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Latitude *Retired*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Legacy ID *Retired*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lep_Flag__c</fullName>
        <inlineHelpText>Indicates whether or not the student has Limited English Proficiency (LEP). This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>LEP Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Longitude *Retired*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <inlineHelpText>Displays contact&apos;s middle name.</inlineHelpText>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the student is listed as a migrant. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Migrant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <inlineHelpText>Displays the contact&apos;s preferred nickname. This field is automatically updated if the same field on the Staff/Student record is updated.</inlineHelpText>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>A long text area that displays any notes regarding the contact.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_via_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the parent would prefer to receve notifications via email.</inlineHelpText>
        <label>Notify via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_via_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if parent would prefer to receve notifications via SMS text message.</inlineHelpText>
        <label>Notify via SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Official_Exit_Type__c</fullName>
        <inlineHelpText>Displays a student&apos;s exit type. This picklist can be modified for the field and its value must be set manually. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Official Exit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TO (Transfer Out of State)</fullName>
                </value>
                <value>
                    <fullName>TS (Transfer In State - Other LEA)</fullName>
                </value>
                <value>
                    <fullName>TS (Transfer In State - Non-Public)</fullName>
                </value>
                <value>
                    <fullName>NI (No Show)</fullName>
                </value>
                <value>
                    <fullName>EX (Expulsion)</fullName>
                </value>
                <value>
                    <fullName>NI (No Information)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Member_of_Cohort__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Original member of the cohort</description>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce. Use the similar field on the Student record.</inlineHelpText>
        <label>Original Member of Cohort *Retired*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_for_Directory__c</fullName>
        <description>Permission to have the parent information included in the E. L. Haynes Family Directory (Given only to E. L. Haynes Families)</description>
        <inlineHelpText>Displays whether or not contact has given permission to include the information in the school directory. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Permission for Directory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Phone__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Personal Phone *Retired*</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photograph_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the staff or student&apos;s photograph has been authorized. This field is automatically updated if the same field on the Staff/Student record is updated.</inlineHelpText>
        <label>Photograph Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the student has completed his/her portfolio.</inlineHelpText>
        <label>Portfolio Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Required__c</fullName>
        <formula>IF( Cohort__r.Portfolio_Required__c , &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select if a portfolio is required for graduation.</inlineHelpText>
        <label>Portfolio Required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>Used for parent/guardian to determine what language to send notifications/written information. Replacing &quot;Receive written information in Spanish?&quot; checkbox so as to make more modular and allow for multiple possible languages.</description>
        <inlineHelpText>Displays the language that the student or parent/guardian wishes to receive emails and/or SMS notifications in. Current options are English and Spanish.</inlineHelpText>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_School_1_Type__c</fullName>
        <inlineHelpText>Displays the student&apos;s previous school type.  These values can be customized. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Previous School 1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public, in State</fullName>
                </value>
                <value>
                    <fullName>Public, Charter in State</fullName>
                </value>
                <value>
                    <fullName>Public, Different state</fullName>
                </value>
                <value>
                    <fullName>Private, non-religiously-affiliated, same district</fullName>
                </value>
                <value>
                    <fullName>Private, non-religiously-affiliated, different district, same state</fullName>
                </value>
                <value>
                    <fullName>Private, non-religiously-affiliated, different state</fullName>
                </value>
                <value>
                    <fullName>Private, religiously-affiliated, same district</fullName>
                </value>
                <value>
                    <fullName>Private, religiously-affiliated, different district, same state</fullName>
                </value>
                <value>
                    <fullName>Private, religiously-affiliated, different state</fullName>
                </value>
                <value>
                    <fullName>Non-existent or Foreign</fullName>
                </value>
                <value>
                    <fullName>Original entry into US School (no previous school)</fullName>
                </value>
                <value>
                    <fullName>Original entry into US School (no schooling interruption)</fullName>
                </value>
                <value>
                    <fullName>Original entry into US School (schooling interruption)</fullName>
                </value>
                <value>
                    <fullName>Located outside of the country</fullName>
                </value>
                <value>
                    <fullName>Institution (example: correctional facility)</fullName>
                </value>
                <value>
                    <fullName>Charter school</fullName>
                </value>
                <value>
                    <fullName>Home schooling</fullName>
                </value>
                <value>
                    <fullName>Matriculating (passed previous school&apos;s highest grade level)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_School_1__c</fullName>
        <inlineHelpText>Displays the name of the student&apos;s previous school. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Previous School 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_School_2_Type__c</fullName>
        <inlineHelpText>Displays the student&apos;s previous school type.  These picklist values can be customized. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Previous School 2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public, in State</fullName>
                </value>
                <value>
                    <fullName>Public, Charter in State</fullName>
                </value>
                <value>
                    <fullName>Public, Different state</fullName>
                </value>
                <value>
                    <fullName>Private, non-religiously-affiliated, same district</fullName>
                </value>
                <value>
                    <fullName>Private, non-religiously-affiliated, different district, same state</fullName>
                </value>
                <value>
                    <fullName>Private, non-religiously-affiliated, different state</fullName>
                </value>
                <value>
                    <fullName>Private, religiously-affiliated, same district</fullName>
                </value>
                <value>
                    <fullName>Private, religiously-affiliated, different district, same state</fullName>
                </value>
                <value>
                    <fullName>Private, religiously-affiliated, different state</fullName>
                </value>
                <value>
                    <fullName>Non-existent or Foreign</fullName>
                </value>
                <value>
                    <fullName>Original entry into US School (no previous school)</fullName>
                </value>
                <value>
                    <fullName>Original entry into US School (no schooling interruption)</fullName>
                </value>
                <value>
                    <fullName>Original entry into US School (schooling interruption)</fullName>
                </value>
                <value>
                    <fullName>Located outside of the country</fullName>
                </value>
                <value>
                    <fullName>Institution (example: correctional facility)</fullName>
                </value>
                <value>
                    <fullName>Charter school</fullName>
                </value>
                <value>
                    <fullName>Home schooling</fullName>
                </value>
                <value>
                    <fullName>Matriculating (passed previous school&apos;s highest grade level)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_School_2__c</fullName>
        <inlineHelpText>Displays the name of the student&apos;s previous school. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Previous School 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this parent the primary contact for the student?</description>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Primary Parent *Retired*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Cohort_Graduation_Date__c</fullName>
        <formula>Cohort__r.Projected_Graduation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the projected graduation date from the student&apos;s cohort. This field displays on the transcript.</inlineHelpText>
        <label>Projected Cohort Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_graduation_date__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Projected graduation date *Retired*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Race_PowerSchool_Import__c</fullName>
        <inlineHelpText>Imported from legacy PowerSchool race data. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Race PowerSchool Import</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <inlineHelpText>Displays the student&apos;s race. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Written_Information_in_Spanish__c</fullName>
        <inlineHelpText>Select whether or not the parent/guardian would like to receive written information from the school in Spanish.</inlineHelpText>
        <label>Receive Written Information in Spanish</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>To store Student/Parent Id as External Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Displays the unique reference ID for the student.  This value should be the same as the Student Id on the associated Student record(s).</inlineHelpText>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Relationship *Retired*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Need Values Here</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residence_After_Exiting_School__c</fullName>
        <description>The residence of the student immediately after exiting/withdrawing from school for an exit reason other than graduation.</description>
        <inlineHelpText>Displays the residence of the student immediately after exiting/withdrawing from school for an exit reason other than graduation. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Residence After Exiting School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Armed services</fullName>
                </value>
                <value>
                    <fullName>New residence of family</fullName>
                </value>
                <value>
                    <fullName>New residence of student</fullName>
                </value>
                <value>
                    <fullName>No record of residence</fullName>
                </value>
                <value>
                    <fullName>Non-educational institution</fullName>
                </value>
                <value>
                    <fullName>Same residence</fullName>
                </value>
                <value>
                    <fullName>Other educational institution</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Daily_EndTime__c</fullName>
        <inlineHelpText>Displays the scheduled daily end time for a staff contact.</inlineHelpText>
        <label>Scheduled Daily End Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Time__c</fullName>
        <inlineHelpText>Displays the scheduled daily start time for a staff contact.</inlineHelpText>
        <label>Scheduled Daily Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Work_Days_Weekly__c</fullName>
        <description>The specific day(s) of a week that an individual is scheduled to perform for an employer (e.g., Monday, Wednesday, and Friday; Monday to Friday).</description>
        <inlineHelpText>Displays the specific day(s) of a week that an individual is scheduled to work (e.g., Monday, Wednesday, and Friday; Monday to Friday).</inlineHelpText>
        <label>Scheduled Work Days Weekly</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturaday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Work_Months_Annually__c</fullName>
        <description>The specific month(s) of a year that an individual is scheduled to perform for an employer (e.g., September to May; June, and August to December).</description>
        <inlineHelpText>Displays the specific month(s) of a year that an individual is scheduled to work (e.g., September to May; June, and August to December).</inlineHelpText>
        <label>Scheduled Work Months Annually</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <inlineHelpText>Displays a secondary e-mail address where the contact may be reached.</inlineHelpText>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Hours_Completed__c</fullName>
        <inlineHelpText>Provides a summary of all community service hours logged using the Community Service Wizard for a given student.</inlineHelpText>
        <label>Service Hours Completed</label>
        <summarizedField>Community_Service__c.Service_Hours_Completed__c</summarizedField>
        <summaryForeignKey>Community_Service__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Hours_Remaining__c</fullName>
        <formula>MAX(Cohort__r.Required_Community_Service_Hours__c -  Service_Hours_Completed__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays community service hours remaining to be completed by a student.  This number is determined by taking the required hours for community service (from Cohort record) minus the hours completed (from Community Service record).</inlineHelpText>
        <label>Service Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <inlineHelpText>Displays contact&apos;s social security number.</inlineHelpText>
        <label>Social Security Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Code__c</fullName>
        <inlineHelpText>This field is currently not being used in SchoolForce.</inlineHelpText>
        <label>Staff Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Photo__c</fullName>
        <inlineHelpText>Rich text area used to store staff photo.</inlineHelpText>
        <label>Staff Photo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Displays the contact&apos;s start date. This field must be updated manually.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Current_Grade__c</fullName>
        <formula>TEXT(Student__r.Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the student&apos;s current grade. If a student has left your school, it will display the grade from the most recent Student record.</inlineHelpText>
        <label>Student Current Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <formula>Student__r.Id</formula>
        <inlineHelpText>Displays the 15-digit Salesforce ID of the Student record associated with this contact.</inlineHelpText>
        <label>Student Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Picture__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Student Picture *Retired*</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field provides a link to the most recent Student record.</inlineHelpText>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Substitute_Status__c</fullName>
        <description>An indication of an individual&apos;s willingness to perform services for an employer on an as-needed basis.</description>
        <inlineHelpText>Indicates a staff member&apos;s willingness to be a substitute teacher.</inlineHelpText>
        <label>Substitute Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Willing</fullName>
                </value>
                <value>
                    <fullName>Not Willing</fullName>
                </value>
                <value>
                    <fullName>Currently Substituting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>